Fixing spacing of logo and navlinks - Logo was up against the side of the window - Navlinks and Logo weren't aligned, but are aligned consistently now

--- a/src/containers/Layout/index.css
+++ b/src/containers/Layout/index.css
@@ -14,7 +14,7 @@
 #navLinks {
   display: flex;
   flex-direction: column;
-  padding-left: .75em;
+  padding-left: 2vh;
   justify-content: space-between;
   object-fit: contain;
   height: 15vh;
